--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+	"start": "npm run start",
 	"devStart": "nodemon index.js"
   },
   "keywords": [],
