--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 CONNECTION_URL=mongodb+srv://fullstackapp:fullstackapp@cluster0.fvcej.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+AUTHORIZATION_TOKEN_SECRET=myserversecterkey
